--- a/build.gradle
+++ b/build.gradle
@@ -19,9 +19,9 @@ sourceSets {
 }
 dependencies {
     compile 'junit:junit:4.12'
-    testImplementation group:'junit', name:'junit', version:'4.13'
-    testImplementation group:'com.sun.xml.bind', name:'jaxb-core', version:'2.3.0'
-    testImplementation group:'javax.xml.bind', name:'jaxb-api', version:'2.3.0'
-    testImplementation group:'com.sun.xml.bind', name:'jaxb-impl', version:'2.3.0'
-    testImplementation group:'javax.activation', name:'activation', version:'1.1.1'
+    implementation group:'junit', name:'junit', version:'4.13'
+    implementation group:'com.sun.xml.bind', name:'jaxb-core', version:'2.3.0'
+    implementation group:'javax.xml.bind', name:'jaxb-api', version:'2.3.0'
+    implementation group:'com.sun.xml.bind', name:'jaxb-impl', version:'2.3.0'
+    implementation group:'javax.activation', name:'activation', version:'1.1.1'
 }
